# mkernel

./: .gitignore  CITATION.cff  Figure_size_handling_for_Quarto.md  README.md  pyproject.toml
examples/: mkernel_test_1.qmd  mkernel_test_2.ipynb  styles.css
kernelspec/: kernel.json  quarto_setup_cell
src/mkernel/: __init__.py  __main__.py  json_logging.py  kernel.py
